# mv7mute

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
mv7mute/: CHANGELOG.md  Cargo.toml
mv7mute-core/: CHANGELOG.md  Cargo.toml
mv7mute-core/src/: lib.rs  mv7.rs
mv7mute-core/src/tests/: failure_paths.rs  mod.rs  support.rs
mv7mute-tray/: CHANGELOG.md  Cargo.toml
mv7mute-tray/src/: app.rs  events.rs  icon.rs  main.rs  startup.rs  worker.rs
mv7mute-tray/wix/: main.wxs
mv7mute/src/: main.rs
mv7mute/wix/: main.wxs
src/: lib.rs  main.rs  mv7.rs
src/tests/: command_contract.rs  mod.rs  support.rs
