[package]
name = "mv7mute-tray"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "System tray controller for mv7mute"
authors = ["Justkant"]
repository = "https://github.com/Justkant/mv7mute"
readme = "../README.md"
license = "MIT"
keywords = ["mv7", "shure", "mute", "tray"]
categories = ["gui"]

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "1C46CA45-AFA3-4AE2-94CA-55B0BE10B9AB"
path-guid = "B6BD1C45-4A0B-48D7-B161-C4161158701A"
manufacturer = "Justkant"
license = false
eula = false

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["png"] }
mv7mute-core = { version = "0.1.2", path = "../mv7mute-core" }
single-instance = "0.3.3"
tray-icon = "0.23.1"
winit = "0.30.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
