[package]
name = "mv7mute"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Atomic CLI to control mute and lock state on the Shure MV7"
repository = "https://github.com/Justkant/mv7mute"
readme = "../README.md"
license = "MIT"
keywords = ["mv7", "shure", "mute", "audio", "cli"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
mv7mute-core = { path = "../mv7mute-core" }
